@@ -8,6 +8,10 @@
 	  read up the new help for the f, F and ; commands for details
 	  removed the following hint options: 'hintchars' 'maxhints'
 	  added the following hint options: 'hinttimeout'
+	* new ~ mapping to open the home directory
+	* :open tries to open a relative filename now, if you do a :open foo.html
+	  or :open ../hello.txt;
+	* new :cd and :pwd commands
     * new :dialog command to open various firefox dialogs
 	* new a and A mappings to deal with bookmarks
 	* added ]n and ]p to navigate to the next/previous document based on
